RESOLVED FIXED21563
platform Gradient class should not use the CSS parser
https://bugs.webkit.org/show_bug.cgi?id=21563
Summary platform Gradient class should not use the CSS parser
Darin Adler
Reported 2008-10-12 17:24:36 PDT
The platform Gradient class should not be using the CSS parser.
Attachments
patch (3.81 KB, patch)
2008-10-12 17:33 PDT, Darin Adler
mitz: review+
Darin Adler
Comment 1 2008-10-12 17:33:09 PDT
mitz
Comment 2 2008-10-12 17:47:17 PDT
Comment on attachment 24312 [details] patch r=me
Darin Adler
Comment 3 2008-10-12 18:07:37 PDT
Note You need to log in before you can comment on or make changes to this bug.