2008-10-12  Darin Adler  <darin@apple.com>

Reviewed by Dan Bernstein.

        - https://bugs.webkit.org/show_bug.cgi?id=21563
          Bug 21563: platform Gradient class should not use the CSS parser

        * platform/graphics/Gradient.cpp: Removed the overload of addColorStop
        that accepts a CSS color string. That's handled in the DOM now, not here.
        (WebCore::Gradient::addColorStop): Use getRGBA instead of having our own
        copy of it here.
        * platform/graphics/Gradient.h: More of the same. Tweak formatting a bit.



Canonical link: https://commits.webkit.org/29783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37540 268f45cc-cd09-0410-ab3c-d52691b4dbfc